kubernetes/audiobookshelf/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: audiobookshelf
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      securityContext:
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      containers:
      - name: audiobookshelf
        image: ghcr.io/advplyr/audiobookshelf:2.37.1@sha256:581d68b2a6fc7ebf58d81c878a9f387cbbc0d88ac9d37b298b9cee10168af85b
        ports:
        - containerPort: 13378
          name: http
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /metadata
          name: metadata
        - mountPath: /audiobooks
          name: audiobooks
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: audiobookshelf-config
      - name: metadata
        persistentVolumeClaim:
          claimName: audiobookshelf-metadata
      - name: audiobooks
        nfs:
          server: fs2.oneill.net
          path: /volume2/shared/books/audiobookshelf
