kubernetes/audiobookshelf/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: audiobookshelf

spec:
  selector:
    app: audiobookshelf
  ports:
  - protocol: TCP
    port: 13378
    targetPort: http
    name: http
  type: ClusterIP
